--- a/configs.json
+++ b/configs.json
@@ -3,7 +3,7 @@
     {
       "class": "BBIKDJSelector",
       "alias": "少妇战法",
-      "activate": true,
+      "activate": false,
       "params": {
         "j_threshold": 15,
         "bbi_min_window": 20,
@@ -16,7 +16,7 @@
     {
       "class": "SuperB1Selector",
       "alias": "SuperB1战法",
-      "activate": true,
+      "activate": false,
       "params": {
         "lookback_n": 10,
         "close_vol_pct": 0.02,
@@ -36,7 +36,7 @@
     {
       "class": "BBIShortLongSelector",
       "alias": "补票战法",
-      "activate": true,
+      "activate": false,
       "params": {
         "n_short": 5,
         "n_long": 21,
@@ -51,7 +51,7 @@
     {
       "class": "PeakKDJSelector",
       "alias": "填坑战法",
-      "activate": true,
+      "activate": false,
       "params": {
         "j_threshold": 10,
         "max_window": 120,
@@ -63,7 +63,7 @@
     {
       "class": "MA60CrossVolumeWaveSelector",
       "alias": "上穿60放量战法",
-      "activate": true,
+      "activate": false,
       "params": {
         "lookback_n": 25,
         "vol_multiple": 1.8,
@@ -76,7 +76,7 @@
     {
       "class": "BigBullishVolumeSelector",
       "alias": "暴力K战法",
-      "activate": true,
+      "activate": false,
       "params": {
         "up_pct_threshold": 0.06,
         "upper_wick_pct_max": 0.02,
@@ -84,6 +84,18 @@
         "close_lt_zxdq_mult": 1.15,
         "vol_lookback_n": 20,
         "vol_multiple": 2.5
+      }
+    },
+    {
+      "class": "CMFDivergenceSelector",
+      "alias": "CMF背离战法",
+      "activate": true,
+      "params": {
+        "cmf_period": 20,
+        "lookback_n": 60,
+        "price_tolerance": 0.01,
+        "min_peak_distance": 1,
+        "min_cmf_improvement": 0.005
       }
     }
   ]
